# qrdx-chain

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MANIFEST.in  Makefile  NODE_STARTUP_READINESS.md  PHASE2_5_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_QRPOS_IMPLEMENTATION.md  PQ_IMPLEMENTATION_ROADMAP.md  PQ_IMPLEMENTATION_STATUS.md  PQ_TRANSACTION_IMPLEMENTATION.md  PRODUCTION_READINESS.md  QRDX_IMPLEMENTATION_CHECKLIST.md  README.md  STUBS_REMOVED_SUMMARY.md  TESTNET_SETUP_GUIDE.md  config.example.toml  mypy.ini  pyproject.toml  pytest.ini  requirements-v3.txt  requirements.txt  run_node.py  send_system_wallet_tx.py  setup.py  setup.sh  sha3.py  test_pq_integration.py  test_pq_transactions.py  (+5 more)
.circleci/: build_geth.sh  build_influxdb.sh  config.yml
.devcontainer/: devcontainer.json  install-deps.sh  install-liboqs.sh  py-path.sh  setup-oqs.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
dappnode/: dappnode_package.json  docker-compose.yml
docker/: Dockerfile  Dockerfile.node  Dockerfile.validator  QUICKSTART-PRODUCTION.md  QUICKSTART.md  README-PRODUCTION.md  README.md  alert-rules.yml  beacon.Dockerfile  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.py  generate-topology.py  prometheus.yml  push-both-to-ghcr.sh  push-to-ghcr.sh
docs/: BLOCK_EXPLORER_API.md  BLOCK_EXPLORER_CHECKLIST.md  BLOCK_EXPLORER_IMPLEMENTATION_COMPLETE.md  BLOCK_EXPLORER_QUICKREF.md  BLOCK_EXPLORER_SUMMARY.md  BOOTSTRAP_AND_GENESIS.md  CONTRACT_IMPLEMENTATION.md  CONTRACT_STATE_INTEGRATION.md  EVM_EXECUTOR_100PCT.md  EVM_INTEGRATION_COMPLETE.md  EVM_INTEGRATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUCCESS.md  IPC_Event_Delivery_Investigation.md  MODERNIZATION_CHECKLIST.md  MODERNIZATION_PLAN.md  Makefile  ONCHAIN_VALIDATOR_SETUP.md  PHASE_3_3_CHECKPOINT_TRACKING.md  PHASE_3_4_FORK_CHOICE.md  PHASE_3_COMPLETE_SUMMARY.md  POS_IMPLEMENTATION.md  POS_IMPLEMENTATION_COMPLETE.md  POS_SUMMARY.md  PRODUCTION_ROADMAP.md  PRODUCTION_VERIFICATION.md  Python_3.12_Migration.md  QR-PoS_Phase3_Roadmap.md  QRDX_PROGRAM_LIBRARY_PROPOSAL.md  README_STATE_COMPLETE.md  README_STATE_INTEGRATION.md  ROUTER_REFACTORING.md  RPC_Testing_Results.md  STAKE_SECURITY_IMPLEMENTATION.md  STATE_BRIDGE_IMPLEMENTATION.md  STATE_INTEGRATION_ARCHITECTURE.md  STATE_INTEGRATION_INDEX.md  STATE_INTEGRATION_QUICKREF.md  STATE_INTEGRATION_SUMMARY.md  STATE_INTEGRATION_TEST_RESULTS.md  (+16 more)
examples/: contract_examples.py
miner/: README.md  cpu_miner.py  cuda_miner.py
newsfragments/: 2127.internal.rst  README.md  validate_files.py
p2p/: __init__.py  _utils.py  abc.py  asyncio_utils.py  auth.py  auth_pqc.py  behaviors.py  commands.py  connection.py  constants.py  disconnect.py  discovery.py  ecies.py  events.py  exceptions.py  handshake.py  kademlia.py  logging.py  logic.py  message.py  metrics.py  multiplexer.py  p2p_api.py  p2p_proto.py  peer.py  peer_backend.py  peer_pool.py  protocol.py  qualifiers.py  receipt.py  resource_lock.py  (+7 more)
(+768 files in other folders)
