[project]
name = "qrdx-chain"
version = "2.0.0"
description = "QRDX Blockchain - Web3 compatible with post-quantum cryptography"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "QRDX Team"}
]
requires-python = ">=3.10"
keywords = ["blockchain", "cryptocurrency", "post-quantum", "web3", "ethereum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    
    # Cryptography
    "eth-keys>=0.4.0",
    "eth-account>=0.10.0",
    "eth-hash[pycryptodome]>=0.5.0",
    "pycryptodome>=3.19.0",
    "cryptography>=41.0.0",
    
    # Encoding
    "rlp>=3.0.0",
    
    # CLI
    "click>=8.1.0",
    
    # Networking
    "websockets>=12.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
pq = [
    "liboqs-python>=0.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
mining = [
    "numpy>=1.26.0",
]
all = [
    "liboqs-python>=0.9.0",
    "numpy>=1.26.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
qrdx-wallet = "qrdx.cli.wallet:cli"
qrdx-node = "run_node:main"

[project.urls]
Homepage = "https://github.com/qrdx/qrdx-chain"
Documentation = "https://docs.qrdx.network"
Repository = "https://github.com/qrdx/qrdx-chain"
Issues = "https://github.com/qrdx/qrdx-chain/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["qrdx*"]

[tool.setuptools.package-data]
qrdx = ["*.sql", "*.toml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | ref
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "ref"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["ref/", "tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "ref",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
